Known Errors.txt
stormx:26% g++ -o p.out *.cpp
gameEngine.cpp: In constructor ‘GameEngine::GameEngine()’:
gameEngine.cpp:30:24: error: no matching function for call to ‘Character::Character()’
 GameEngine::GameEngine()
                        ^
gameEngine.cpp:30:24: note: candidates are:
In file included from battle.h:3:0,
                 from gameEngine.h:9,
                 from gameEngine.cpp:1:
Pokemon.h:54:2: note: Character::Character(std::string, int)
  Character(std::string, int);
  ^
Pokemon.h:54:2: note:   candidate expects 2 arguments, 0 provided
Pokemon.h:53:2: note: Character::Character(std::string)
  Character(std::string);      // create accessors for the items
  ^
Pokemon.h:53:2: note:   candidate expects 1 argument, 0 provided
Pokemon.h:39:7: note: Character::Character(const Character&)
 class Character {
       ^
Pokemon.h:39:7: note:   candidate expects 1 argument, 0 provided